name:                colorcoded-words
version:             0.1.0.0
homepage:            https://github.com/joshuaclayton/colorcoded-words#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2017
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable colorcoded-words-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , colorcoded-words
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/colorcoded-words
